--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "medusa-next",
   "version": "1.0.3",
   "private": true,
-  "author": "Kasper Fabricius Kristensen <kasper@medusajs.com> & Victor Gerbrands <victor@medusajs.com> (https://www.medusajs.com)",
+  "author": "(https://www.medusajs.com)",
   "description": "Next.js Starter to be used with Medusa server",
   "license": "MIT",
   "keywords": [
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^2.1.4",
     "@hookform/error-message": "^2.0.0",
     "@medusajs/link-modules": "^0.2.3",
     "@medusajs/medusa-js": "^6.1.7",
@@ -34,19 +35,21 @@
     "@paypal/react-paypal-js": "^7.8.1",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
+    "@tailwindcss/typography": "^0.5.0",
     "algoliasearch": "^4.23.3",
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
     "medusa-react": "^9.0.0",
     "next": "^14.0.0",
     "pg": "^8.11.3",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-country-flag": "^3.0.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
-    "react-slick": "^0.30.2",
+    "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.4",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
   },
@@ -62,6 +65,7 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.18",
     "@types/react-instantsearch-dom": "^6.12.3",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "eslint": "8.10.0",
