--- a/e2e/.env.example
+++ b/e2e/.env.example
@@ -14,6 +14,6 @@ TEST_POSTGREST_PORT=5432
 PRODUCTION_POSTGRES_DATABASE=medusa_db
 
 # Backend server API
-CLIENT_SERVER=http://localhost:9000
+CLIENT_SERVER=http://localhost:9000,https://medusa-backend-black.vercel.app
 MEDUSA_ADMIN_EMAIL=admin@medusa-test.com
 MEDUSA_ADMIN_PASSWORD=supersecret
