--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "@medusajs/ui-preset": "^1.0.2",
     "@playwright/test": "^1.41.1",
     "@types/lodash": "^4.14.195",
-    "@types/node": "17.0.21",
+    "@types/node": "^17.0.21",
     "@types/pg": "^8.11.0",
-    "@types/react": "^18.2.42",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.2.18",
     "@types/react-instantsearch-dom": "^6.12.3",
     "@types/react-slick": "^0.23.13",
@@ -73,6 +73,6 @@
     "postcss": "^8.4.8",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.0.23",
-    "typescript": "^5.3.2"
+    "typescript": "^5.5.2"
   }
 }
