--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@medusajs/product": "^0.3.4",
     "@medusajs/ui": "^2.2.0",
     "@meilisearch/instant-meilisearch": "^0.7.1",
+    "@nextui-org/accordion": "^2.0.35",
+    "@nextui-org/react": "^2.4.2",
     "@paypal/paypal-js": "^5.0.6",
     "@paypal/react-paypal-js": "^7.8.1",
     "@radix-ui/react-accordion": "^1.2.0",
