--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "algoliasearch": "^4.23.3",
     "axios": "^1.6.7",
+    "framer-motion": "^11.2.11",
     "lodash": "^4.17.21",
     "medusa-react": "^9.0.0",
     "next": "^14.0.0",
